--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,11 @@
 Options -MultiViews
 RewriteEngine On
+
+#RewriteCond %{HTTPS} !=on
+#RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^ public/index.php [QSA,L]
+
+#RewriteCond %{REQUEST_URI} !^public
+#RewriteRule ^(.*)$ public/$1 [L]
